--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="top-bar">
               Oleksandra Kukharska - CV
         </div>
+        
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -44,7 +45,16 @@
                     While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management.
                     For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
                     After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
-                    On this webpage, you can explore some of my projects, interests, and hobbies.    
+                    On this webpage, you can explore some of my projects, interests, and hobbies.<br><br>
+                    <h3>Languages</h3>
+                        <ul>
+                              <li>🇵🇹 Portuguese – Native</li>
+                              <li>🇬🇧 English – Fluent</li>
+                              <li>🇪🇸 Spanish – Intermediate</li>
+                              <li>🇺🇦 Ukrainian – Fluent</li>
+                              <li>🇷🇺 Russian – Fluent</li>
+                              <li>🇰🇷 Korean – Beginner</li>
+                        </ul>
                 </p>
             </div>
         </div>
