--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
                     After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
                     On this webpage, you can explore some of my projects, interests, and hobbies.<br><br>
-                    <h3>Languages</h3>
+                    <h3>Language Proficiency</h3>
                         <ul>
-                              <li>🇵🇹 Portuguese – Native</li>
-                              <li>🇬🇧 English – Fluent</li>
-                              <li>🇪🇸 Spanish – Intermediate</li>
-                              <li>🇺🇦 Ukrainian – Fluent</li>
-                              <li>🇷🇺 Russian – Fluent</li>
-                              <li>🇰🇷 Korean – Beginner</li>
+                              <li>🇵🇹 Portuguese – C2</li>
+                              <li>🇬🇧 English – C1</li>
+                              <li>🇺🇦 Ukrainian – C1</li>
+                              <li>🇷🇺 Russian – B2</li>
+                              <li>🇪🇸 Spanish – B1</li>
+                              <li>🇰🇷 Korean – Topik 1</li>
                         </ul>
                 </p>
             </div>
