--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
                     On this webpage, you can explore some of my projects, interests, and hobbies.<br><br>
                     <h3>Language Proficiency</h3>
-                        <ul>
+                        <ul style="font-variant: small-caps; font-size: 14px;">
                               <li>🇵🇹 Portuguese – C2</li>
                               <li>🇬🇧 English – C1</li>
                               <li>🇺🇦 Ukrainian – C1</li>
