--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     While I enjoyed it, I still wasn’t sure if it was the right course for me, so I decided to pursue another Bachelor's, this time in Business Management.
                     For my second cycle of studies, I chose a Master’s in Data Analysis and Decision Supporting Systems, as it combines both technology and business.
                     After building a strong foundation in business, I decided to deepen my programming skills, so I’m currently pursuing a Bachelor's in Informatics Engineering.<br><br>
-                    On this webpage, you can explore some of my projects, interests, and hobbies.<br><br>
+                    On this webpage, you can explore some of my projects, interests, and hobbies.<br>
                     <h4>Language Proficiency</h4>
                         <ul style=" font-size: 12px;">
                               <li>🇵🇹 Portuguese – C2</li>
