--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <p>I am passionate about photography. Here are some of my shots!</p>
         <div class="photo-gallery">
             <div class="photo">
-                <img src="images/Aveiro1.jpg" alt="Aveiro, Portugal">
+                <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
                 <div class="photo-description">Aveiro, Portugal</div>
             </div>
             <div class="photo">
@@ -168,12 +168,12 @@
         <div class="projects-list">
             <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
                 <h3>Quantitative Methods in Cryptocurrencies</h3>
-                <p>Research on optimizing neural networks with transfer learning.</p>
+                <p>Statistical Analysis of 3 Cryptocurrencies.</p>
             </div>
 
-            <div class="project-card PowerBI" onclick="showPreview('files/SI_TP.pbix')">
-                <h3>DataWare</h3>
-                <p>Research on data warehousing techniques.</p>
+            <div class="project-card PowerBI" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')">
+                <h3>Academic Performance in PowerBI</h3>
+                <p>Power BI Visualization of Academic Performance of Students and Teachers.</p>
             </div>
 
             <div class="project-card AI" onclick="showPreview('files/Deep_Learning_Optimization.pdf')">
