--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="projects-list">
-            <div class="project-card AI" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
+            <div class="project-card Statistics" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
                 <h3>Quantitative Methods in Cryptocurrencies</h3>
                 <p>Statistical Analysis of 3 Cryptocurrencies.</p>
             </div>
@@ -176,8 +176,8 @@
                 <p>Power BI Visualization of Academic Performance of Students and Teachers.</p>
             </div>
 
-            <div class="project-card AI" onclick="showPreview('files/Deep_Learning_Optimization.pdf')">
-                <h3>Deep Learning Optimization</h3>
+            <div class="project-card DataWarehouse" onclick="showPreview('files/SI2Datawarehouse.pdf')">
+                <h3>Research Report - OLAP and its tools</h3>
                 <p>Exploring hyperparameter tuning with Random Search.</p>
             </div>
 
