--- a/index.html
+++ b/index.html
@@ -160,25 +160,25 @@
         <h2>Projects</h2>
         <div class="projects-categories">
             <button class="filter-btn" onclick="filterProjects('all')">All</button>
-            <button class="filter-btn" onclick="filterProjects('AI')">Statistics</button>
-            <button class="filter-btn" onclick="filterProjects('PowerBI')">Power BI</button>
-            <button class="filter-btn" onclick="filterProjects('Other')">Other</button>
+            <button class="filter-btn" onclick="filterProjects('Statistics')">Statistics</button>
+            <button class="filter-btn" onclick="filterProjects('Business Intelligence')">Business Intelligence</button>
+            <button class="filter-btn" onclick="filterProjects('Data Warehousing')">Data Warehousing</button>
         </div>
 
         <div class="projects-list">
             <div class="project-card Statistics" onclick="showPreview('files/Metodos_Quantitativos_em_Criptomoedas.pdf')">
                 <h3>Quantitative Methods in Cryptocurrencies</h3>
-                <p>Statistical Analysis of 3 Cryptocurrencies.</p>
+                <p>Statistical Analysis of 3 Cryptocurrencies</p>
             </div>
 
-            <div class="project-card PowerBI" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')">
+            <div class="project-card Business Intelligence" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')">
                 <h3>Academic Performance in PowerBI</h3>
-                <p>Power BI Visualization of Academic Performance of Students and Teachers.</p>
+                <p>Power BI Visualization of Academic Performance of Students and Teachers</p>
             </div>
 
-            <div class="project-card DataWarehouse" onclick="showPreview('files/SI2Datawarehouse.pdf')">
+            <div class="project-card Data Warehousing" onclick="showPreview('files/SI2Datawarehouse.pdf')">
                 <h3>Research Report - OLAP and its tools</h3>
-                <p>Exploring hyperparameter tuning with Random Search.</p>
+                <p>Exploring OLAP Tools and Their Application in Decision Support Systems</p>
             </div>
 
             <div class="project-card PowerBI" onclick="showPreview('files/Financial_Analysis.pbix')">
