--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         <div class="projects-categories">
             <button class="filter-btn" onclick="filterProjects('all')">All</button>
             <button class="filter-btn" onclick="filterProjects('Statistics')">Statistics</button>
+            <button class="filter-btn" onclick="filterProjects('Artificial Intelligence')">Artificial Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('Business Intelligence')">Business Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('Data Warehousing')">Data Warehousing</button>
         </div>
@@ -181,9 +182,9 @@
                 <p>Exploring OLAP Tools and Their Application in Decision Support Systems</p>
             </div>
 
-            <div class="project-card PowerBI" onclick="showPreview('files/Financial_Analysis.pbix')">
-                <h3>Financial Analysis Dashboard</h3>
-                <p>Analyzing financial data with interactive visualizations.</p>
+            <div class="project-card Artificial Intelligence" onclick="showPreview('files/ICModeloCNN.pdf')">
+                <h3>Analysis of the Problem and Development of a Model with CNN Networks</h3>
+                <p>Design and Optimization of CNN Models for Multi-Class Classification</p>
             </div>
 
             <div class="project-card Other" onclick="showPreview('files/Web_Development_Project.pdf')">
