--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
                 <p>Design and Optimization of CNN Models for Multi-Class Classification</p>
             </div>
 
-            <div class="project-card Other" onclick="showPreview('files/Web_Development_Project.pdf')">
-                <h3>Web Development Project</h3>
-                <p>Building a responsive web application using modern frameworks.</p>
+            <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICComputacaoSwarm.pdf')">
+                <h3>Swarm Intelligence</h3>
+                <p>Nature-Inspired Optimization for Neural Networks</p>
             </div>
         </div>
 
