--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
                 <h3>Swarm Intelligence</h3>
                 <p>Nature-Inspired Optimization for Neural Networks</p>
             </div>
+            <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICTransferLearning.pdf')">
+                <h3>Transfer learning and deployment of neural network models</h3>
+                <p>Implementation and Application of a Classification Model</p>
+            </div>
         </div>
 
         <div class="file-preview" id="file-preview">
