--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
                 <h3>Quantitative Methods in Cryptocurrencies</h3>
                 <p>Statistical Analysis of 3 Cryptocurrencies</p>
             </div>
-
             <div class="project-card BusinessIntelligence" onclick="showPreview('files/SI2PowerBI-Dashboard.pdf')">
                 <h3>Academic Performance in PowerBI</h3>
                 <p>Power BI Visualization of Academic Performance of Students and Teachers</p>
@@ -181,7 +180,6 @@
                 <h3>Research Report - OLAP and its tools</h3>
                 <p>Exploring OLAP Tools and Their Application in Decision Support Systems</p>
             </div>
-
             <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICModeloCNN.pdf')">
                 <h3>Analysis of the Problem and Development of a Model with CNN Networks</h3>
                 <p>Design and Optimization of CNN Models for Multi-Class Classification</p>
@@ -194,6 +192,10 @@
             <div class="project-card ArtificialIntelligence" onclick="showPreview('files/ICTransferLearning.pdf')">
                 <h3>Transfer learning and deployment of neural network models</h3>
                 <p>Implementation and Application of a Classification Model</p>
+            </div>
+            <div class="project-card Statistics" onclick="showPreview('files/ProjetoAED.pdf')">
+                <h3>Exploratory Data Analysis Project</h3>
+                <p>Econometric Techniques Applied to the Foreign Exchange and Stock Market</p>
             </div>
         </div>
 
