--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <button class="filter-btn" onclick="filterProjects('ArtificialIntelligence')">Artificial Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('BusinessIntelligence')">Business Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('DataWarehousing')">Data Warehousing</button>
+            <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button>
         </div>
 
         <div class="projects-list">
@@ -196,6 +197,10 @@
             <div class="project-card Statistics" onclick="showPreview('files/ProjetoAED.pdf')">
                 <h3>Exploratory Data Analysis Project</h3>
                 <p>Econometric Techniques Applied to the Foreign Exchange and Stock Market</p>
+            </div>
+            <div class="project-card ITManagement" onclick="showPreview('files/RelatorioSeB.pdf')">
+                <h3>eBusiness Systems Project</h3>
+                <p>Development and Market Analysis</p>
             </div>
         </div>
 
