--- a/index.html
+++ b/index.html
@@ -202,6 +202,14 @@
                 <h3>eBusiness Systems Project</h3>
                 <p>Development and Market Analysis</p>
             </div>
+            <div class="project-card Statistics" onclick="showPreview('files/MTIPerformance.pdf')">
+                <h3>Performance in the Olympic Games</h3>
+                <p>A Statistical Analysis of the 2022 Winter Olympics</p>
+            </div>
+            <div class="project-card BusinessIntelligence" onclick="showPreview('files/BIAnalysis.pdf')">
+                <h3>Social Media Analytics Tools</h3>
+                <p>Critical Analysis</p>
+            </div>
         </div>
 
         <div class="file-preview" id="file-preview">
