--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <button class="filter-btn" onclick="filterProjects('ArtificialIntelligence')">Artificial Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('BusinessIntelligence')">Business Intelligence</button>
             <button class="filter-btn" onclick="filterProjects('DataWarehousing')">Data Warehousing</button>
+            <button class="filter-btn" onclick="filterProjects('DataMining')">Data Mining</button>
             <button class="filter-btn" onclick="filterProjects('ITManagement')">IT Management</button>
         </div>
 
@@ -209,6 +210,10 @@
             <div class="project-card BusinessIntelligence" onclick="showPreview('files/BIAnalysis.pdf')">
                 <h3>Social Media Analytics Tools</h3>
                 <p>Critical Analysis</p>
+            </div>
+            <div class="project-card DataMining" onclick="showPreview('files/DataMining-PrecoGas')">
+                <h3>Evolution of Natural Gas Prices in Portugal Compared to EU Countries</h3>
+                <p>A Data Mining Approach to Price Trends</p>
             </div>
         </div>
 
