--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <h3>Evolution of Natural Gas Prices in Portugal Compared to EU Countries</h3>
                 <p>A Data Mining Approach to Price Trends</p>
             </div>
-            <div class="project-card DataMining" onclick="showPreview('files/BDDigitRec')">
+            <div class="project-card DataMining" onclick="showPreview('files/BDDigitRec.pdf')">
                 <h3>Handwritten Digit Recognition in Python</h3>
                 <p>Test of 3 Supervised Learning Algorithms</p>
             </div>
