--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                 <h3>Social Media Analytics Tools</h3>
                 <p>Critical Analysis</p>
             </div>
-            <div class="project-card DataMining" onclick="showPreview('files/DataMining-PrecoGas.pdf')">
+            <div class="project-card DataMining" onclick="showPreview('files/DataMining-PrecosGas.pdf')">
                 <h3>Evolution of Natural Gas Prices in Portugal Compared to EU Countries</h3>
                 <p>A Data Mining Approach to Price Trends</p>
             </div>
-            <div class="project-card DataMining" onclick="showPreview('files/BDDigitRec.pdf')">
+            <div class="project-card ArtificialIntelligence" onclick="showPreview('files/BDDigitRec.pdf')">
                 <h3>Handwritten Digit Recognition in Python</h3>
                 <p>Test of 3 Supervised Learning Algorithms</p>
             </div>
