--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
                 <h3>Handwritten Digit Recognition in Python</h3>
                 <p>Test of 3 Supervised Learning Algorithms</p>
             </div>
+            <div class="project-card ArtificialIntelligence" onclick="showPreview('files/Thesis_Oleksandra_Kukharska.pdf')">
+                <h3>Master Thesis</h3>
+                <p>Artificial Intelligence in Invoice Recognition: A Systematic Literature Review</p>
+            </div>
         </div>
 
         <div class="file-preview" id="file-preview">
