--- a/index.html
+++ b/index.html
@@ -115,12 +115,18 @@
         </div>
     </section>
 
-    <section id="interests">
-        <div class="container">
-            <h2>Interests</h2>
-            <p>My interests include Data Science, Deep Learning, Software Development, and Business Intelligence...</p>
-        </div>
-    </section>
+<section id="interests">
+    <div class="container">
+        <h2>My Interests</h2>
+        <p>I'm passionate about exploring various fields in technology and data. Here's a glimpse of what excites me:</p>
+        <ul class="interests-list">
+            <li><i class="fa fa-chart-bar"></i> Data Science</li>
+            <li><i class="fa fa-brain"></i> Deep Learning</li>
+            <li><i class="fa fa-code"></i> Software Development</li>
+            <li><i class="fa fa-tasks"></i> Business Intelligence</li>
+        </ul>
+    </div>
+</section>
 
 <section id="hobbies">
     <div class="container">
@@ -128,7 +134,7 @@
         <p>I am passionate about photography. Here are some of my shots!</p>
         <div class="photo-gallery">
             <div class="photo">
-                <img src="images/aveiro1.jpg" alt="Aveiro, Portugal">
+                <img src="images/Aveiro1.jpg" alt="Aveiro, Portugal">
                 <div class="photo-description">Aveiro, Portugal</div>
             </div>
             <div class="photo">
