--- a/index.html
+++ b/index.html
@@ -118,15 +118,27 @@
 <section id="interests">
     <div class="container">
         <h2>My Interests</h2>
-        <p>I'm passionate about exploring various fields in technology and data. Here's a glimpse of what excites me:</p>
-        <ul class="interests-list">
-            <li><i class="fa fa-chart-bar"></i> Data Science</li>
-            <li><i class="fa fa-brain"></i> Deep Learning</li>
-            <li><i class="fa fa-code"></i> Software Development</li>
-            <li><i class="fa fa-tasks"></i> Business Intelligence</li>
-        </ul>
+        <div class="card-container">
+            <div class="card">
+                <h3>Data Science</h3>
+                <p>Analyzing complex datasets to extract meaningful insights and drive decisions.</p>
+            </div>
+            <div class="card">
+                <h3>Deep Learning</h3>
+                <p>Working with neural networks and algorithms that enable machines to learn from large amounts of data.</p>
+            </div>
+            <div class="card">
+                <h3>Software Development</h3>
+                <p>Creating software solutions that solve real-world problems, with an emphasis on quality and performance.</p>
+            </div>
+            <div class="card">
+                <h3>Business Intelligence</h3>
+                <p>Transforming data into actionable insights that help businesses make informed decisions.</p>
+            </div>
+        </div>
     </div>
 </section>
+
 
 <section id="hobbies">
     <div class="container">
