--- a/index.html
+++ b/index.html
@@ -118,27 +118,41 @@
 <section id="interests">
     <div class="container">
         <h2>My Interests</h2>
-        <div class="card-container">
-            <div class="card">
-                <h3>Data Science</h3>
-                <p>Analyzing complex datasets to extract meaningful insights and drive decisions.</p>
-            </div>
-            <div class="card">
-                <h3>Deep Learning</h3>
-                <p>Working with neural networks and algorithms that enable machines to learn from large amounts of data.</p>
-            </div>
-            <div class="card">
-                <h3>Software Development</h3>
-                <p>Creating software solutions that solve real-world problems, with an emphasis on quality and performance.</p>
-            </div>
-            <div class="card">
-                <h3>Business Intelligence</h3>
-                <p>Transforming data into actionable insights that help businesses make informed decisions.</p>
-            </div>
+        <div class="interests-list">
+            <ul>
+                <li><strong>Artificial Intelligence</strong>
+                    <ul>
+                        <li>Computer Vision</li>
+                        <li>Natural Language Processing</li>
+                        <li>Deep Learning</li>
+                        <li>Machine Learning</li>
+                    </ul>
+                </li>
+                <li><strong>Data Analysis</strong>
+                    <ul>
+                        <li>Exploratory Data Analysis</li>
+                        <li>Data Mining</li>
+                        <li>Big Data</li>
+                        <li>Business Intelligence</li>
+                    </ul>
+                </li>
+                <li><strong>Computer Graphics</strong>
+                    <ul>
+                        <li>3D Computer Graphics</li>
+                    </ul>
+                </li>
+                <li><strong>Data Administration</strong>
+                    <ul>
+                        <li>Data Modelling</li>
+                        <li>Data Integration</li>
+                        <li>Database Architecture</li>
+                    </ul>
+                </li>
+                <li><strong>UX/UI Design</strong></li>
+            </ul>
         </div>
     </div>
 </section>
-
 
 <section id="hobbies">
     <div class="container">
