--- a/index.html
+++ b/index.html
@@ -118,38 +118,27 @@
 <section id="interests">
     <div class="container">
         <h2>My Interests</h2>
-        <div class="interests-list">
-            <ul>
-                <li><strong>Artificial Intelligence</strong>
-                    <ul>
-                        <li>Computer Vision</li>
-                        <li>Natural Language Processing</li>
-                        <li>Deep Learning</li>
-                        <li>Machine Learning</li>
-                    </ul>
-                </li>
-                <li><strong>Data Analysis</strong>
-                    <ul>
-                        <li>Exploratory Data Analysis</li>
-                        <li>Data Mining</li>
-                        <li>Big Data</li>
-                        <li>Business Intelligence</li>
-                    </ul>
-                </li>
-                <li><strong>Computer Graphics</strong>
-                    <ul>
-                        <li>3D Computer Graphics</li>
-                    </ul>
-                </li>
-                <li><strong>Data Administration</strong>
-                    <ul>
-                        <li>Data Modelling</li>
-                        <li>Data Integration</li>
-                        <li>Database Architecture</li>
-                    </ul>
-                </li>
-                <li><strong>UX/UI Design</strong></li>
-            </ul>
+        <div class="interests-cards">
+            <div class="card">
+                <h3>Artificial Intelligence</h3>
+                <p>Computer Vision, NLP, Deep Learning, Machine Learning</p>
+            </div>
+            <div class="card">
+                <h3>Data Analysis</h3>
+                <p>Exploratory Data Analysis, Data Mining, Big Data, Business Intelligence</p>
+            </div>
+            <div class="card">
+                <h3>Computer Graphics</h3>
+                <p>3D Computer Graphics</p>
+            </div>
+            <div class="card">
+                <h3>Data Administration</h3>
+                <p>Data Modelling, Data Integration, Database Architecture</p>
+            </div>
+            <div class="card">
+                <h3>UX/UI Design</h3>
+                <p>Designing user-friendly interfaces</p>
+            </div>
         </div>
     </div>
 </section>
