--- a/index.html
+++ b/index.html
@@ -118,26 +118,49 @@
 <section id="interests">
     <div class="container">
         <h2>My Interests</h2>
-        <div class="interests-cards">
-            <div class="card">
-                <h3>Artificial Intelligence</h3>
-                <p>Computer Vision, NLP, Deep Learning, Machine Learning</p>
+        <div class="expandable-list">
+            <div class="expandable-item">
+                <button class="expand-btn">Artificial Intelligence</button>
+                <div class="expand-content">
+                    <ul>
+                        <li>Computer Vision</li>
+                        <li>Natural Language Processing</li>
+                        <li>Deep Learning</li>
+                        <li>Machine Learning</li>
+                    </ul>
+                </div>
             </div>
-            <div class="card">
-                <h3>Data Analysis</h3>
-                <p>Exploratory Data Analysis, Data Mining, Big Data, Business Intelligence</p>
+            <div class="expandable-item">
+                <button class="expand-btn">Data Analysis</button>
+                <div class="expand-content">
+                    <ul>
+                        <li>Exploratory Data Analysis</li>
+                        <li>Data Mining</li>
+                        <li>Big Data</li>
+                        <li>Business Intelligence</li>
+                    </ul>
+                </div>
             </div>
-            <div class="card">
-                <h3>Computer Graphics</h3>
-                <p>3D Computer Graphics</p>
+            <div class="expandable-item">
+                <button class="expand-btn">Computer Graphics</button>
+                <div class="expand-content">
+                    <ul>
+                        <li>3D Computer Graphics</li>
+                    </ul>
+                </div>
             </div>
-            <div class="card">
-                <h3>Data Administration</h3>
-                <p>Data Modelling, Data Integration, Database Architecture</p>
+            <div class="expandable-item">
+                <button class="expand-btn">Data Administration</button>
+                <div class="expand-content">
+                    <ul>
+                        <li>Data Modelling</li>
+                        <li>Data Integration</li>
+                        <li>Database Architecture</li>
+                    </ul>
+                </div>
             </div>
-            <div class="card">
-                <h3>UX/UI Design</h3>
-                <p>Designing user-friendly interfaces</p>
+            <div class="expandable-item">
+                <button class="expand-btn">UX/UI Design</button>
             </div>
         </div>
     </div>
