--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 <section id="interests">
     <div class="container">
         <h2>My Interests</h2>
-        <div class="expandable-list">
-            <div class="expandable-item">
-                <button class="expand-btn">Artificial Intelligence</button>
-                <div class="expand-content">
+        <div class="hover-card-container">
+            <div class="hover-card">
+                <h3>Artificial Intelligence</h3>
+                <div class="hover-content">
                     <ul>
                         <li>Computer Vision</li>
                         <li>Natural Language Processing</li>
@@ -130,9 +130,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="expandable-item">
-                <button class="expand-btn">Data Analysis</button>
-                <div class="expand-content">
+            <div class="hover-card">
+                <h3>Data Analysis</h3>
+                <div class="hover-content">
                     <ul>
                         <li>Exploratory Data Analysis</li>
                         <li>Data Mining</li>
@@ -141,17 +141,17 @@
                     </ul>
                 </div>
             </div>
-            <div class="expandable-item">
-                <button class="expand-btn">Computer Graphics</button>
-                <div class="expand-content">
+            <div class="hover-card">
+                <h3>Computer Graphics</h3>
+                <div class="hover-content">
                     <ul>
                         <li>3D Computer Graphics</li>
                     </ul>
                 </div>
             </div>
-            <div class="expandable-item">
-                <button class="expand-btn">Data Administration</button>
-                <div class="expand-content">
+            <div class="hover-card">
+                <h3>Data Administration</h3>
+                <div class="hover-content">
                     <ul>
                         <li>Data Modelling</li>
                         <li>Data Integration</li>
@@ -159,8 +159,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="expandable-item">
-                <button class="expand-btn">UX/UI Design</button>
+            <div class="hover-card">
+                <h3>UX/UI Design</h3>
             </div>
         </div>
     </div>
