--- a/index.html
+++ b/index.html
@@ -166,6 +166,19 @@
     </div>
 </section>
 
+<section id="technical-skills">
+    <div class="container">
+        <h2>Technical Skills</h2>
+        <ul class="skills-list">
+            <li>Programming Languages: Python, JavaScript, Java</li>
+            <li>Databases: MySQL, PostgreSQL, MongoDB</li>
+            <li>Web Development: HTML, CSS, JavaScript, React</li>
+            <li>Data Science: Pandas, NumPy, Scikit-learn, TensorFlow</li>
+            <li>DevOps: Docker, Kubernetes, AWS</li>
+        </ul>
+    </div>
+</section>
+    
 <section id="hobbies">
     <div class="container">
         <h2>Hobbies</h2>
