--- a/index.html
+++ b/index.html
@@ -115,67 +115,76 @@
         </div>
     </section>
 
-<section id="interests">
+<section id="skills-interests">
     <div class="container">
-        <h2>My Interests</h2>
-        <div class="accordion-container">
-            <div class="accordion-item">
-                <h3 class="accordion-title">Artificial Intelligence</h3>
-                <div class="accordion-content">
-                    <ul>
-                        <li>Computer Vision</li>
-                        <li>Natural Language Processing</li>
-                        <li>Deep Learning</li>
-                        <li>Machine Learning</li>
-                    </ul>
+        <div class="row">
+            <!-- Interests Column -->
+            <div class="column interests">
+                <h2>Interests</h2>
+                <div class="interest-item">
+                    <h3>Artificial Intelligence</h3>
+                    <div class="sub-interests">
+                        <ul>
+                            <li>Computer Vision</li>
+                            <li>Natural Language Processing</li>
+                            <li>Deep Learning</li>
+                            <li>Machine Learning</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="interest-item">
+                    <h3>Data Science</h3>
+                    <div class="sub-interests">
+                        <ul>
+                            <li>Exploratory Data Analysis</li>
+                            <li>Data Mining</li>
+                            <li>Big Data</li>
+                            <li>Business Intelligence</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="interest-item">
+                    <h3>Computer Graphics</h3>
+                    <div class="sub-interests">
+                        <ul>
+                            <li>3D Computer Graphics</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="interest-item">
+                    <h3>Data Administration</h3>
+                    <div class="sub-interests">
+                        <ul>
+                            <li>Data Modelling</li>
+                            <li>Data Integration</li>
+                            <li>Database Architecture</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="interest-item">
+                    <h3>UX/UI Design</h3>
+                    <div class="sub-interests">
+                        <ul>
+                            <li>Design Principles</li>
+                            <li>Wireframing</li>
+                            <li>Prototyping</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="accordion-item">
-                <h3 class="accordion-title">Data Analysis</h3>
-                <div class="accordion-content">
-                    <ul>
-                        <li>Exploratory Data Analysis</li>
-                        <li>Data Mining</li>
-                        <li>Big Data</li>
-                        <li>Business Intelligence</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h3 class="accordion-title">Computer Graphics</h3>
-                <div class="accordion-content">
-                    <ul>
-                        <li>3D Computer Graphics</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h3 class="accordion-title">Data Administration</h3>
-                <div class="accordion-content">
-                    <ul>
-                        <li>Data Modelling</li>
-                        <li>Data Integration</li>
-                        <li>Database Architecture</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h3 class="accordion-title">UX/UI Design</h3>
+
+            <!-- Technical Skills Column -->
+            <div class="column technical-skills">
+                <h2>Technical Skills</h2>
+                <ul class="skills-list">
+                    <li>Programming Languages: Python, JavaScript, Java</li>
+                    <li>Databases: MySQL, PostgreSQL, MongoDB</li>
+                    <li>Web Development: HTML, CSS, JavaScript, React</li>
+                    <li>Data Science: Pandas, NumPy, Scikit-learn, TensorFlow</li>
+                    <li>DevOps: Docker, Kubernetes, AWS</li>
+                </ul>
             </div>
         </div>
-    </div>
-</section>
-
-<section id="technical-skills">
-    <div class="container">
-        <h2>Technical Skills</h2>
-        <ul class="skills-list">
-            <li>Programming Languages: Python, JavaScript, Java</li>
-            <li>Databases: MySQL, PostgreSQL, MongoDB</li>
-            <li>Web Development: HTML, CSS, JavaScript, React</li>
-            <li>Data Science: Pandas, NumPy, Scikit-learn, TensorFlow</li>
-            <li>DevOps: Docker, Kubernetes, AWS</li>
-        </ul>
     </div>
 </section>
     
