--- a/index.html
+++ b/index.html
@@ -176,11 +176,12 @@
             <div class="column technical-skills">
                 <h3>Technical Skills</h3>
                 <ul class="skills-list">
-                    <li>Programming Languages: Python, JavaScript, Java</li>
-                    <li>Databases: MySQL, PostgreSQL, MongoDB</li>
-                    <li>Web Development: HTML, CSS, JavaScript, React</li>
-                    <li>Data Science: Pandas, NumPy, Scikit-learn, TensorFlow</li>
-                    <li>DevOps: Docker, Kubernetes, AWS</li>
+                    <li><strong>Programming Languages:</strong> Python, Java, C, R, PL/SQL</li>
+                    <li><strong>Web & App Development:</strong> HTML5/CSS, OutSystems</li>
+                    <li><strong>Data & Statistical Tools:</strong> SPSS, Gretl, MATLAB</li>
+                    <li><strong>BI & Data Analysis:</strong> Power BI, Microsoft Office</li>
+                    <li><strong>Database Management:</strong> SQL (Oracle), PHC CS</li>
+                    <li><strong>Graphics & Design:</strong> Blender</li>
                 </ul>
             </div>
         </div>
